# poly2mono

./: .clangd  .gitignore  generate_report.sh  melos.yaml  pubspec.yaml  temp.sh
.github/composite/melos-bootstrap/: action.yaml
.github/workflows/: c-dart_interop_tests.yaml  weekly-jobs.yaml
benchmark/c_base64_encoding/: .gitignore  CMakeLists.txt  README.md  atsdk.cmake  benchmark.c
benchmark/dart_crypto/: .gitignore  CMakeLists.txt  README.md  pubspec.yaml
benchmark/dart_crypto/lib/: algorithms.dart  atchops_better.dart  atchops_boring.dart  atchops_crypto.dart  atchops_current.dart  atchops_ffi.dart  atchops_mbedtls.dart
ffi/dart/: CMakeLists.txt  README.md  atchops.def  pubspec.yaml
ffi/dart/lib/: atsdk_ffi.dart
ffi/dart/lib/src/: .gitignore
tests/c_dart_interop_tests/: CMakeLists.txt
